--- a/content/post/2015-07-23-r-rmarkdown.Rmd
+++ b/content/post/2015-07-23-r-rmarkdown.Rmd
@@ -2,6 +2,7 @@
 title: "The Analysis of cesR Data"
 author: "Wen Huang"
 date: 2020-9-28
+bibliography:"reference.bib"
 categories: ["R"]
 tags: ["R Markdown", "plot", "regression"]
 ---
@@ -14,7 +15,7 @@ knitr::opts_chunk$set(collapse = TRUE)
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
-You can embed an R code chunk like this:
+You can embed an R code chunk like this @citetidyverse:
 
 ```{r cars}
 summary(cars)
@@ -35,3 +36,5 @@ pie(
   init.angle = -50, border = NA
 )
 ```
+
+#References
